[global]
setup-hooks =
    pq.version.version_hook

[metadata]
name = django-pq
author = Brett Haydon
author-email = brett@haydon.id.au
homepage = https://github.com/bretth/django-pq
summary = A task queue based on the RQ api with a postgresql backend
description-file = README.md
license = BSD
requires-dist = setuptools
                times
                python-dateutil
                django-picklefield
classifier =
    Development Status :: 3 - Alpha
    Framework :: django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: System :: Distributed Computing
keywords =
    django
    asynchronous
    tasks
    queue
[files]
packages = pq
extra_files =
            README.md
            LICENSE.txt