[metadata]
name = django-pq
version = 0.3
author = Brett Haydon
author-email = brett@haydon.id.au
home-page = https://github.com/bretth/django-pq
project-url =
    Github, https://github.com/bretth/django-pq
summary = A task queue based on the RQ api with a postgresql backend
description-file = README.rst
                CHANGES.rst
license = BSD
requires-dist = setuptools
                times
                python-dateutil
                django-picklefield
                six
classifier =
    Development Status :: 3 - Alpha
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Topic :: System :: Distributed Computing
keywords =
    django
    asynchronous
    tasks
    queue
[files]
packages = pq
extra_files =
            README.rst
            CHANGES.rst
            LICENSE.txt

[flake8]
ignore = E128
